# actions.ext

./: .gitignore  AMBuildScript  AMBuilder  CMakeLists.txt  LICENSE  Makefile  PackageScript  README.md  pushbuild.txt  trigger_build.txt
.github/workflows/: build.yml  ci.yml
cmake/: sourcemod.cmake
package/gamedata/: actions.games.txt  actions.l4d2.txt
safetyhook/: .gitignore  AMBuildScript  AMBuilder  README.md  configure.py
safetyhook/include/: expected.hpp
safetyhook/src/: allocator.cpp  easy.cpp  inline_hook.cpp  mid_hook.cpp  os.linux.cpp  os.windows.cpp  vmt_hook.cpp
safetyhook/zydis/: README.md
sdk/: sample.ext.sln  sample.ext.vcxproj  sample.ext.vcxproj.filters
source/: actions_caller.h  actions_commands.h  actions_component.cpp  actions_component.h  actions_constructor.cpp  actions_constructor.h  actions_constructor_smc.cpp  actions_constructor_smc.h  actions_custom_legacy.cpp  actions_custom_legacy.h  actions_encoders.h  actions_legacy.h  actions_legacy_listeners.h  actions_manager.cpp  actions_manager.h  actions_natives.h  actions_processor.cpp  actions_processor.h  actions_processor_impl.cpp  actions_processor_impl.h  actions_processor_shared.cpp  actions_processor_shared.h  actions_propagation.cpp  actions_propagation.h  actions_pubvars.cpp  actions_pubvars.h  actions_tools.cpp  actions_tools.h  actions_vtableswap.h  actionsdefs.h  extension.cpp  extension.h  hook.cpp  hook.h  offset_manager.h  smsdk_config.h
source/actions/: actions_commands.h  actions_cquery.h  actions_custom.h  actions_helpers.h  actions_manager.h  actions_processor.h  (+1 more)
(+69 files in other folders)
